--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "author": "tony <aweed1@swarthmore.edu>",
   "scripts": {
-    "start": "parcel ./src/index.html"
+    "start": "parcel ./src/index.html",
+    "build": "cross-env NODE_ENV=production parcel build ./src/index.html",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist"
   },
   "license": "MIT",
   "dependencies": {
@@ -14,6 +17,8 @@
     "@tensorflow/tfjs-backend-webgl": "^2.4.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
+    "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.4"
   },
   "browserslist": [
