--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "tony <aweed1@swarthmore.edu>",
   "scripts": {
     "start": "parcel ./src/index.html",
-    "build": "cross-env NODE_ENV=production parcel build ./src/index.html",
+    "build": "cross-env NODE_ENV=production parcel build ./src/index.html  --public-url .",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d dist"
   },
